# r2pb

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: python-package.yml
src/r2pb/: __init__.py  cli.py  converter.py  fetcher.py  generator.py  mapper.py  parser.py
src/r2pb/templates/: msg.proto.j2
tests/: test_cli.py  test_converter.py  test_fetcher.py  test_generator.py  test_mapper.py  test_parser.py
