[build-system]
requires = ["setuptools>=61.0"]
bild-backend = "setuptools.build_meta"

[project]
name = "r2pb"
version = "0.0.1"
authors = [
    { name="Mark", email="hzypp1995@gmail.com" },
]
description = "A simple tool to convert ROS .msg files to Protobuf .proto files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/tz-bb/r2pb"
"Bug Tracker" = "https://github.com/tz-bb/r2pb/issues"

[project.scripts]
r2pb = "r2pb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]